Fix header background on ie9
It doesn't understand gradients, so we need to set a simple
background colour for it to use.

--- a/public/stylesheets/player.css
+++ b/public/stylesheets/player.css
@@ -163,6 +163,9 @@ br {
 	width: 100%;
 
 	border-bottom: 1px solid #535353;
+	/* ie9 doesn't know about gradients, so set a colour first which it
+	   will use instead.*/
+	background: rgba(0, 0, 0, 0.88);
 	background:
 		linear-gradient(
 			to top,
